A la pagina se le agrego estilo con CSS y quedo bonito

--- a/colores.css
+++ b/colores.css
@@ -1,7 +1,61 @@
-#titulo {
-    color: tomato;
+html{
+    font-family: 'Montserrat', sans-serif;
 }
 
-p.texto {
-    color: slateblue;
+body{
+    margin: 0;
+    background-color: #efefef;
+}
+
+header{
+    background-color: #6D564A;
+    color: #E5D9D3;
+    padding: 3rem 2rem;
+}
+header h1{
+    font-size: 4rem;
+    text-align: center;
+}
+
+.container{
+    width: 300px;
+    margin: 0 auto;
+}
+
+section article{
+    transition: box-shadow 0.3s ease;
+    background-color: #fff;
+    margin: 1rem 0;
+    border-radius: 0.5rem;
+    padding: 0.25rem 0;
+    cursor: pointer;
+}
+
+section article:hover{
+    box-shadow: 0 0.1rem 0.4rem rgba(0, 0, 0, 30);
+}
+
+section article h2, section article p{
+    margin: 1rem;
+}
+
+footer{
+    background-color: #30231C;
+    padding: 3rem;
+    color: #E5D9D3;
+
+}
+footer section{
+    float: right;
+}
+footer p{
+    margin: 0%;
+}
+footer a{
+    transition: color 0.3s ease;
+    color: white;
+    text-decoration: none;
+}
+footer a:hover{
+    color: cornflowerblue;
 }
